# aithinker_dev_open_sdk

./: build.sh  build_ci.sh  pre_commit.sh  readme.md
os/bl618_sdk_lts/sdk/bouffalo_sdk/components/wireless/wifi6/: CMakeLists.txt
os/ln882h_sdk_lts/sdk/ln882h/: 0001-1.add-otp.patch  CHANGELOG.md  CMakeLists.txt  README.md  keil_clean.bat  ln_sdk_build_check.py  start_build.py
os/ln882h_sdk_lts/sdk/ln882h/components/: CMakeLists.txt
os/ln882h_sdk_lts/sdk/ln882h/components/ble/ble_arch/: arch.h  ble_arch_main.c
os/ln882h_sdk_lts/sdk/ln882h/components/ble/ble_lib_import/: ble_port.c  ble_port.h
os/ln882h_sdk_lts/sdk/ln882h/components/fota/ota_agent/: ota_agent.c  ota_agent.h  ota_err.h  ota_port.c  ota_port.h  ota_types.h  xz_decompress.c  xz_decompress.h
os/ln882h_sdk_lts/sdk/ln882h/components/fs/nvds/: ln_nvds.c  ln_nvds.h
os/ln882h_sdk_lts/sdk/ln882h/components/fs/partition_mgr/: flash_partition_mgr.c  flash_partition_mgr.h
os/ln882h_sdk_lts/sdk/ln882h/components/kernel/FreeRTOS/: hooks.c
os/ln882h_sdk_lts/sdk/ln882h/components/kernel/FreeRTOS_Adapter/: freertos_common.c  freertos_common.h  freertos_cpuusage.c  freertos_debug.c  freertos_debug.h  freertos_queue.c  freertos_queue.h  freertos_semaphore.c  freertos_thread.c  freertos_time.h
os/ln882h_sdk_lts/sdk/ln882h/components/kernel/osal/: osal.h
os/ln882h_sdk_lts/sdk/ln882h/components/libc/: newlib_noos.c  newlib_stub.c  stub_malloc.c  stub_malloc.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at/: ln_at.c  ln_at.h  ln_at_cfg.h  ln_at_server.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at/adapter/: ln_at_adapt.c  ln_at_adapt.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at/cmd/: ln_at_cmd.c  ln_at_cmd.h  ln_at_cmd_basic.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at/parser/: ln_at_parser.c  ln_at_parser.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at/transfer/: ln_at_transfer.c  ln_at_transfer.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/: ln_at_cmd_version.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/base/: ln_at_cmd_base_plus.c  ln_at_cmd_base_plus.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/bluetooth/: ln_at_cmd_bt.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/http/: ln_at_http.c  ln_at_http.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/mqtt/: ln_at_mqtt.c  ln_at_mqtt.h  ln_at_mqtt_topic.c  ln_at_mqtt_topic.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/net/: ln_at_cmd_net_test.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/ota/: ln_at_cmd_ota.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/peripheral/: ln_at_drive_port.c  ln_at_drive_port.h  ln_at_peripheral.c  ln_at_peripheral.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/system/: ln_at_cmd_system.c
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/tcpip/: ln_at_sntp.c  ln_at_sntp.h  ln_at_tcpip.c  ln_at_tcpip.h
os/ln882h_sdk_lts/sdk/ln882h/components/ln_at_cmd/wifi/: ln_at_cmd_wifi.c
os/ln882h_sdk_lts/sdk/ln882h/components/net/dhcpd/: CMakeLists.txt  dhcp_packet.c  dhcp_packet.h  dhcpd.c  dhcpd.h  dhcpd_api.h  ip_allocator.c
os/ln882h_sdk_lts/sdk/ln882h/components/net/iperf/: iperf.c  iperf.h
os/ln882h_sdk_lts/sdk/ln882h/components/net/mbedtls/: CMakeLists.txt
os/ln882h_sdk_lts/sdk/ln882h/components/net/ping/: ping.c  ping.h
os/ln882h_sdk_lts/sdk/ln882h/components/serial/: serial.c  serial.h
os/ln882h_sdk_lts/sdk/ln882h/components/smartlink/airkiss/: CMakeLists.txt  airkiss.c  airkiss.h  airkiss_def.h  airkiss_entry.c  airkiss_entry.h  airkiss_port.c  airkiss_port.h
os/ln882h_sdk_lts/sdk/ln882h/components/smartlink/smartcfg/: CMakeLists.txt  ln_smartcfg.c  ln_smartcfg.h  ln_smartcfg_api.h  ln_smartcfg_port.c  ln_smartcfg_port.h
os/ln882h_sdk_lts/sdk/ln882h/components/smartlink/softapcfg/: CMakeLists.txt  ln_softapcfg.c  ln_softapcfg.h  ln_softapcfg_api.h  ln_softapcfg_port.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/: crc16.c  crc16.h  crc32.c  crc32.h  ln_aes.c  ln_aes.h  ln_list.h  ln_mem_pool.h  ln_misc.c  ln_misc.h  ln_psk_calc.c  ln_psk_calc.h  ln_sha1.c  ln_sha1.h  sysparam_factory_setting.h  system_parameter.c  system_parameter.h  wrap_stdio.c  wrap_stdio.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/debug/: ln_assert.c  ln_assert.h  log.c  log.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/fifo/: fifobuf.c  fifobuf.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/linux_compat/: linux_compat_time.c
os/ln882h_sdk_lts/sdk/ln882h/components/utils/power_mgmt/: ln_pm.c  ln_pm.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/reboot_trace/: reboot_trace.c  reboot_trace.h
os/ln882h_sdk_lts/sdk/ln882h/components/utils/runtime/: runtime.c  runtime.h
os/ln882h_sdk_lts/sdk/ln882h/doc/: LN882H分区地址计算器.xlsx
os/ln882h_sdk_lts/sdk/ln882h/doc/BLE-API接口说明/: ble_app_api.md  ln_ble_advertising-CH.md  ln_ble_app_defaut_cfg-CH.md  ln_ble_app_defines-CH.md  ln_ble_connection_manager-CH.md  ln_ble_gap-CH.md  ln_ble_gatt-CH.md  ln_ble_scan-CH.md  ln_ble_smp-CH.md
os/ln882h_sdk_lts/sdk/ln882h/lib/armcclib/: ln882h_ble_full_stack.lib  ln882h_wifi.lib
os/ln882h_sdk_lts/sdk/ln882h/lib/armclanglib/: readme.md
os/ln882h_sdk_lts/sdk/ln882h/mcu/CMSIS_5.3.0/: cmsis_armcc.h
os/ln882h_sdk_lts/sdk/ln882h/mcu/ln882h/: base_addr_ln882h.h  ln882h.h  ln882h_rom_fun.h  ln_compiler.h  ln_types.h  ln_utils.h  mem_map_ln882h.h  system_ln882h.c  system_ln882h.h
os/ln882h_sdk_lts/sdk/ln882h/project/bootcode/: readme.md
os/ln882h_sdk_lts/sdk/ln882h/project/combo_mcu_at_example/: CMakeLists.txt
os/ln882h_sdk_lts/sdk/ln882h/project/smartconfig/: CMakeLists.txt  ProjModuleCollect.cmake
os/ln882h_sdk_lts/sdk/ln882h/tools/JFlash/: JFlash.ini  LN882H_Flash_4MB.mot  ln882h.jflash
os/ln882h_sdk_lts/sdk/ln882h/tools/python_scripts/: __init__.py  after_build_base.py  after_build_for_boot.py  after_build_gcc.py  after_build_keil.py  before_build_base.py  before_build_gcc.py  before_build_keil.py  boot_header.py  image_header.py  makeimage.py  ota_image_generator.py  part_desc_info.py  rewrite_ln882x_linker_script.py  sdk_env_check.py
(+1789 files in other folders)
